# fabric_monitoring

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FINAL_REVIEW_STATUS.md  GAP_REPORT.md  LICENSE  Makefile  PROJECT_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  SECURITY.md  WIKI.md  analyze_fabric_items.py  audit_sp_access.py  enforce_workspace_access.py  environment.yml  extract_daily_data_real.py  extract_fabric_item_details.py  extract_historical_data.py  fabric_workspace_report.py  generate_reports_manual.py  monitor_hub_pipeline.py  project.toml  pyproject.toml  test_comparative_analysis.py  test_enrichment_fix.py  test_pipeline.py
.agent/workflows/: development.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/test_output/: pipeline_summary_20251203_084931.json  pipeline_summary_20251203_084934.json  pipeline_summary_20251203_084953.json  pipeline_summary_20251203_091913.json
artifacts/test_output/complete_pipeline_20251204_192949/: pipeline_test_summary.csv
config/schemas/: workspace_access_suppressions.schema.json  workspace_access_targets.schema.json
docs/: FINAL_REVIEW_STATUS.md  GLOSSARY.md  README.md  TENANT_WIDE_IMPLEMENTATION.md  WORKSPACE_ACCESS_ENFORCEMENT.md
docs/02_User_Guides/: Lineage_Explorer_API.md
docs/05_Architecture_Design/: 01_Lineage_Explorer_Spec.md
docs/archive/: inference_review.md  review_report.md
docs/executive/: USF_Fabric_Monitoring_Executive_Overview.pptx
docs/reference/: Curate a semantic model.txt
docs/reports/: Workspace_Access_Compliance_Report_20251118.md
lineage_explorer/: README.md  __init__.py  __main__.py  api_extended.py  docker-compose.yml  graph_builder.py  models.py  server.py  statistics.py  test_neo4j_queries.py
lineage_explorer/docs/: neo4j_queries.md
lineage_explorer/graph_database/: __init__.py  data_loader.py  neo4j_client.py  queries.py
lineage_explorer/reports/: __init__.py  chain_depth_report.py  lineage_analyzer.py
lineage_explorer/static/: dashboard.html  elements_graph.html  index.html  query_explorer.html  table_impact.html  tables_graph.html
notebooks/: 1_Monitor_Hub_Analysis.ipynb  2A_Fabric_Star_Schema_Builder.ipynb  3_Workspace_Access_Enforcement.ipynb  Fabric_Star_Schema_Builder.ipynb  Monitor_Hub_Analysis.ipynb  Monitor_Hub_Analysis_Advanced.ipynb  Monitor_Hub_Analysis_Fix.ipynb  Workspace_Access_Enforcement.ipynb
powerbi/: README.md  deploy_powerbi_report.py  report_layout.json
powerbi/measures/: fabric_monitoring_measures.dax
powerbi/themes/: usf_fabric_monitoring_theme.json
scripts/: analyze_fabric_items.py  audit_sp_access.py  build_star_schema.py  enforce_workspace_access.py  ensure_containers.py  extract_daily_data.py  extract_fabric_item_details.py  extract_historical_data.py  extract_lineage.py  monitor_hub_pipeline.py  run_full_pipeline.py  run_lineage_explorer.py  start_all.sh  stop_all.sh  validate_config.py
src/core/: enrichment.py  extractor.py  fabric_item_details.py  monitor_hub_extractor.py
src/scripts/: extract_daily_data.py  extract_historical_data.py  extract_lineage.py  fabric_workspace_report.py
src/usf_fabric_monitoring/: __init__.py
src/usf_fabric_monitoring/core/: __init__.py  admin_scanner.py  api_resilience.py  auth.py  config_validation.py  csv_exporter.py  data_loader.py  enrichment.py  env_detection.py  extractor.py  fabric_item_details.py  historical_analyzer.py  item_connections.py  logger.py  monitor_hub_reporter.py  monitor_hub_reporter_clean.py  pipeline.py  schema.py  star_schema_builder.py  type_safety.py  utils.py  workspace_access_enforcer.py
src/usf_fabric_monitoring/scripts/: __init__.py  build_star_schema.py  enforce_workspace_access.py  extract_fabric_item_details.py  extract_historical_data.py  extract_lineage.py  fabric_workspace_report.py  generate_reports_manual.py  monitor_hub_pipeline.py  validate_config.py  visualize_lineage.py
tests/: conftest.py  simple_test.py  test_admin_scanner.py  test_api_resilience.py  test_auth.py  test_basic_imports.py  test_compute_report.py  test_config_schemas.py  test_config_validation.py  test_enrichment_fix.py  test_inference_config.py  test_lineage_extraction.py  test_pipeline.py  test_smart_merge.py  test_star_schema_builder.py  test_type_safety.py  test_url_encoding.py  test_validate_config_cli.py  test_workspace_access_enforcer.py
tools/: generate_exec_pptx.py
tools/dev_tests/: test_complete_pipeline.py  test_duration_fix.py  test_offline_analysis.py
webapp/: Makefile  README.md
webapp/backend/: requirements.txt
webapp/backend/app/: __init__.py  main.py  models.py
webapp/backend/app/api/: progress.py  scenarios.py  search.py
webapp/backend/app/content/: __init__.py  loader.py
webapp/backend/app/content/scenarios/: 01-getting-started.yaml  02-monitor-hub-analysis.yaml  03-workspace-access-enforcement.yaml  04-star-schema-analytics.yaml  05-fabric-deployment.yaml  06-troubleshooting.yaml
webapp/backend/tests/: test_api.py
webapp/frontend/: index.html  package-lock.json  package.json
webapp/frontend/src/: App.tsx  index.css
webapp/frontend/src/components/: CodeBlock.tsx  Layout.tsx
webapp/frontend/src/components/ui/: badge.tsx
webapp/frontend/src/lib/: api.ts
webapp/frontend/src/pages/: HomePage.tsx  ScenarioPage.tsx  SearchPage.tsx
