[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usf_fabric_monitoring"
version = "0.3.4"
description = "Microsoft Fabric Monitoring & Governance System with Advanced Analytics, Smart Merge Technology, and Star Schema Builder"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "plotly",
    "openpyxl",
    "aiohttp",
    "pyyaml",
    "jsonschema",
    "click",
    "rich",
    "typer",
    "python-dotenv",
    "azure-identity",
    "azure-storage-blob",
    "asyncio-throttle",
    "pyarrow",
    "fastparquet"
]

[project.scripts]
usf-monitor-hub = "usf_fabric_monitoring.scripts.monitor_hub_pipeline:main"
usf-enforce-access = "usf_fabric_monitoring.scripts.enforce_workspace_access:main"
usf-validate-config = "usf_fabric_monitoring.scripts.validate_config:main"
usf-star-schema = "usf_fabric_monitoring.scripts.build_star_schema:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "notebook",
    "pyspark",
    "delta-spark",
    "matplotlib",
    "seaborn"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Fabric/Azure credentials and may call real APIs",
]
addopts = "-m 'not integration'"
