[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "usf_fabric_monitoring"
version = "0.3.34"
description = "Microsoft Fabric Monitoring & Governance System with Advanced Analytics, Smart Merge Technology, and Star Schema Builder"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "plotly",
    "openpyxl",
    "aiohttp",
    "pyyaml",
    "jsonschema",
    "click",
    "rich",
    "typer",
    "python-dotenv",
    "azure-identity",
    "azure-storage-blob",
    "asyncio-throttle",
    "pyarrow",
    "fastparquet",
    "fastapi",
    "uvicorn",
    "neo4j"
]

[project.scripts]
usf-monitor-hub = "usf_fabric_monitoring.scripts.monitor_hub_pipeline:main"
usf-enforce-access = "usf_fabric_monitoring.scripts.enforce_workspace_access:main"
usf-validate-config = "usf_fabric_monitoring.scripts.validate_config:main"
usf-star-schema = "usf_fabric_monitoring.scripts.build_star_schema:main"
usf-extract-lineage = "usf_fabric_monitoring.scripts.extract_lineage:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "black",
    "flake8",
    "mypy",
    "jupyter",
    "notebook",
    "pyspark",
    "delta-spark",
    "matplotlib",
    "seaborn"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires Fabric/Azure credentials and may call real APIs",
]
addopts = "-m 'not integration'"

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
    "B905",   # zip without strict
]

[tool.ruff.lint.isort]
known-first-party = ["usf_fabric_monitoring"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests/", "scripts/", "notebooks/"]

